api/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: api
      hosts:
        - api.manifold.derp.ninja
  rules:
    - host: api.manifold.derp.ninja
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api
                port:
                  number: 3000
